# spot-keys

./: .env-sample  .ruff.toml  README.md  build.spec  pyproject.toml  requirements.txt
data/: config.json
spotKeys/: __init__.py  controls.py  core.py  help.py  keyboard.py  keyboardHandler.py  main.py  speech.py  spotify.py  updater.py
src/: main.py
