[project]
name = "spot-keys"
version = "0.1.0"
description = "An applet to define global Spotify keyboard shortcuts for screen reader users"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.6.0",
    "pyinstaller>=6.15.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
    "spotipy>=2.24.0",
    "tolk",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spotKeys"]

[tool.uv.sources]
tolk = { path = "vendor/tolk-python" }

[project.scripts]
main = "spotKeys.main:main"

[tool.ruff]
line-length = 120
output-format = "grouped"
show-fixes = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
indent-style = "tab"
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = [
	"I001", # Import block is un-sorted or un-formatted
	"I002", # Missing required import: {name}
	"W505", # pycodestyle -> Warning -> "Doc line too long"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
